# interpreters

./: .gitignore  LICENSE  MANIFEST.in  METADATA  NOTES.md  README.md  TODO  UPSTREAM  _git.py  _utils.py  build.sh  cpython_helpers.sh  pyproject.toml  setup.py  update.py
.github/workflows/: build.yml  cd.yml  ci.yml  out-of-date.yml
3.12/: MANIFEST.in  setup.py
3.12/src/interpreters_backport/: metadata.py
3.12/src/interpreters_backport/concurrent/futures/: __init__.py
3.12/src/interpreters_experimental/interpreters/: channels.py
backport_3.12/: README.md  pyproject.toml  setup.py
backport_3.12/src/: shim-new-stuff.h
backport_3.12/src/3.12/Objects/: typeobject.c
examples/: an_expensive_module.py  exception_handling.py  exception_re_raising.py  interpreter_class.py  interpreter_state.py  module_functions.py  pickle_passing.py  pre_populate.py  run_isolated.py  run_module.py  run_script.py  run_thread.py  share_file_descriptor.py  some_lib.py  synchronize_with_os_pipe.py  thread_bug.py  threading_interpreter.py
pep_examples/: a_module.py  capture_stdout.py  pre_populate.py  run_isolated.py  share_file_descriptor.py
scripts/: _common.sh  _cparser.py  _cpython.py  _cpython.sh  _git.py  _metadata.py  _utils.py  _utils.sh  bash-common.sh  build.sh  fix-source.py  run-tests.sh  test-archive.py  test-installed.py  test-package.sh  test.py  update.py  update.sh
src/: CPYTHON_REVISION  _channels.c  _interpchannelsmodule.c  _interpqueuesmodule.c  _interpreters.c  _interpreters_common.h  _interpretersmodule.c  abstract.c  crossinterp.c  crossinterp_data_lookup.h  crossinterp_exceptions.h  shim-compatible-includes.h  shim-new-stuff.h  shim.h  thread.c
src-custom/: implementations.h  interpreters.py  runtimebackports.c  shim-compatible-includes.h
src-custom/interpreters_backport/: __init__.py
src-custom/interpreters_experimental/interpreters/: __init__.py
src-upstream/: CPYTHON_REVISION
src-upstream-pending/Modules/: _interpretersmodule.c
src/Include/: pycore_crossinterp.h  pycore_typeobject.h
src/interpreters/: __init__.py  channels.py  queues.py
src/interpreters_backport/: metadata.py
src/interpreters_backport/interpreters/: __init__.py  queues.py
src/interpreters_experimental/interpreters/: channels.py
src/tests/test_interpreters/: test_api.py  test_channels.py  test_lifecycle.py  test_queues.py  test_stress.py  utils.py
