[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interpreters"
version = "0.0.1"
authors = [
  { name="Eric Snow", email="ericsnowcurrently@gmail.com" },
]
description = "a placeholder"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ericsnowcurrently/interpreters"
"Bug Tracker" = "https://github.com/ericsnowcurrently/interpreters/issues"
