[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interpreters_3_12"
version = "0.0.1"
authors = [
  { name="Eric Snow", email="ericsnowcurrently@gmail.com" },
]
description = "a placeholder"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ericsnowcurrently/interpreters"
"Bug Tracker" = "https://github.com/ericsnowcurrently/interpreters/issues"

[tool.hatch.envs.default]
extra-dependencies = [
  "black",
  "pytest",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
minversion = "7.2.2"
python_files = "*.py"  # Discover tests in every python file
addopts = "-rA"

#[mypy]
#ignore_missing_imports = True

[tool.ruff]
select = [
  "A",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "T201",  # "print" is OK
]
